fix white space right margin on mobile view with overflow-wrap: anywhere on li elements

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -516,7 +516,7 @@ li {
 
 
   li {
-    display: inline-block;
+    overflow-wrap: anywhere;
   }
 
   .about_me_section {
